# ComfyUI-Keybinding-extra

./: README.md  __init__.py  custom_nodes.json  pyproject.toml
js/: FPFoldedPrompts.js  debug.js  keybinding_extra.js
nodes/: FPFoldedPrompts.py  FPTextAreaPlus.py  FPTextCleanAndSplitt.py
pf_data/: pf_-1.json
