[project]
name = "comfyui-keybinding-extra"
publisher = "akawana"
version = "1.04"
frontend_version = "1.04"
description = "Adds shortcuts for commenting/deleting lines and includes a Text Cleaner & Splitter node for regional prompting."
readme = "README.md"
requires-python = ">=3.10"

packages = ["nodes"]

[project.urls]
Repository = "https://github.com/akawana/ComfyUI-Keybinding-extra"
Documentation = "https://github.com/akawana/ComfyUI-Keybinding-extra/wiki"
"Bug Tracker" = "https://github.com/akawana/ComfyUI-Keybinding-extra/issues"

[tool.comfy_node]
package = "nodes"
publisher = "akawana"
display_name = "Keybinding Extra"
summary = "Keyboard shortcuts + Text Cleaner & Splitter node"
tags = ["utility", "text", "regional prompting", "shortcuts"]

[tool.comfy]
PublisherId = "akawana" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "Keybinding Extra" # Display name for the Custom Node. Can be changed later.
Icon = "https://example.com/icon.png"